--- a/style.css
+++ b/style.css
@@ -11,9 +11,6 @@ header {
     background-color: #e23636;
     padding: 16px 150px 0 150px;
     justify-content: space-between;
-}
-
-.logo {
     color: #f9faf8;
     font-size: 24px;
     font-weight: 900;
@@ -26,7 +23,7 @@ header {
     gap: 16px;
     margin: 0;
     font-size: 18px;
-    color:#f9faf8;
+    font-weight: normal;
     align-self: center;
 }
 
@@ -87,13 +84,88 @@ header {
 
 .all-illustrations {
     display: flex;
+    margin-top: 32px;
+    font-size: 16px;
+    font-weight: normal;
+    justify-content: center;
+    gap: 45px;
+}
 
+.illustration {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 150px;
+    text-align: center;
 }
 
 .image {
     background-color: white;
-    border: 3px solid #504a4a;
+    border: 4px solid rgb(247,143,63);
     border-radius: 10px;
     height: 150px;
     width: 150px;
+    margin-bottom: 6px;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    font-size: 36px;
+    font-weight: lighter;
+    color: #000000;
+    align-items: center;
+    background-color: hsl(0, 4%, 85%);
+    padding: 120px 445px 100px;
+}
+
+.quote-author {
+    font-size: 18px;
+    font-weight: bold;
+    align-self: flex-end;
+    padding-right: 30px;
+}
+
+.modal {
+    display: flex;
+    border-radius: 10px;
+    background-color: rgb(81,140,202);
+    margin: 80px 150px;
+    justify-content: space-between;
+    font-size: 18px;
+    color:white;
+    padding: 32px 92px;
+    font-weight: bold;
+}
+
+.modal-text {
+    font-weight: normal;
+    font-size: 16px;
+}
+
+.modal-button {
+    border-radius: 8px;
+    background: rgb(81,140,202);
+    border: 2px solid rgb(255, 255, 255);
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 6px 50px;
+    font-family: inherit;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e23636;
+    color: white;
+    font-size: 15px;
+    padding: 22px 0;
+}
+
+img {
+    height: 14px;
+    width: auto;
+    padding: 0 5px;
 }
